Source/DocuEye.Structurizr.DSL.Expressions/StructurizrDSLExpressionsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:/nCode/Parser/DocuEye.Structurizr.DSL.Expressions/StructurizrDSLExpressions.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class StructurizrDSLExpressionsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, ELEMENT=3, ELEMENT_TYPE=4, ELEMENT_PARENT=5, ELEMENT_TAG=6, 
		ELEMENT_TECHNOLOGY=7, ELEMENT_PROPERTIES=8, RELATIONSHIP=9, RELATIONSHIP_TAG=10, 
		RELATIONSHIP_PROPERTIES=11, RELATIONSHIP_SOURCE=12, RELATIONSHIP_DESTINATION=13, 
		VALUE=14, OR=15, AND=16, WILDCARD=17, DOT=18, EQUALS=19, NOTEQUALS=20, 
		RELATIONSHIP_POINTER=21, MORE_THAN=22, WHITESPACE=23;
	public const int
		RULE_generalExpression = 0, RULE_elementTypeExpr = 1, RULE_elementParentExpr = 2, 
		RULE_elementTagExpr = 3, RULE_elementTechnologyExpr = 4, RULE_elementPropertiesExpr = 5, 
		RULE_elementWithCouplingsExpr = 6, RULE_relationshipTagExpr = 7, RULE_relationshipPropertiesExpr = 8, 
		RULE_relationshipSourceExpr = 9, RULE_relationshipDestinationExpr = 10, 
		RULE_relationshipSpecifiedExpr = 11, RULE_relationshipAllExpr = 12, RULE_sourceElement = 13, 
		RULE_destinationElement = 14, RULE_relationshipPointer = 15, RULE_expressionValue = 16, 
		RULE_propertyName = 17, RULE_expressionConnector = 18;
	public static readonly string[] ruleNames = {
		"generalExpression", "elementTypeExpr", "elementParentExpr", "elementTagExpr", 
		"elementTechnologyExpr", "elementPropertiesExpr", "elementWithCouplingsExpr", 
		"relationshipTagExpr", "relationshipPropertiesExpr", "relationshipSourceExpr", 
		"relationshipDestinationExpr", "relationshipSpecifiedExpr", "relationshipAllExpr", 
		"sourceElement", "destinationElement", "relationshipPointer", "expressionValue", 
		"propertyName", "expressionConnector"
	};

	private static readonly string[] _LiteralNames = {
		null, "'['", "']'", null, null, null, null, null, null, null, null, null, 
		null, null, null, "'||'", "'&&'", "'*'", "'.'", "'=='", "'!='", "'->'", 
		"'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "ELEMENT", "ELEMENT_TYPE", "ELEMENT_PARENT", "ELEMENT_TAG", 
		"ELEMENT_TECHNOLOGY", "ELEMENT_PROPERTIES", "RELATIONSHIP", "RELATIONSHIP_TAG", 
		"RELATIONSHIP_PROPERTIES", "RELATIONSHIP_SOURCE", "RELATIONSHIP_DESTINATION", 
		"VALUE", "OR", "AND", "WILDCARD", "DOT", "EQUALS", "NOTEQUALS", "RELATIONSHIP_POINTER", 
		"MORE_THAN", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "StructurizrDSLExpressions.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static StructurizrDSLExpressionsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public StructurizrDSLExpressionsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public StructurizrDSLExpressionsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class GeneralExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ElementTypeExprContext[] elementTypeExpr() {
			return GetRuleContexts<ElementTypeExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementTypeExprContext elementTypeExpr(int i) {
			return GetRuleContext<ElementTypeExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementParentExprContext[] elementParentExpr() {
			return GetRuleContexts<ElementParentExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementParentExprContext elementParentExpr(int i) {
			return GetRuleContext<ElementParentExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementTagExprContext[] elementTagExpr() {
			return GetRuleContexts<ElementTagExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementTagExprContext elementTagExpr(int i) {
			return GetRuleContext<ElementTagExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementTechnologyExprContext[] elementTechnologyExpr() {
			return GetRuleContexts<ElementTechnologyExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementTechnologyExprContext elementTechnologyExpr(int i) {
			return GetRuleContext<ElementTechnologyExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementPropertiesExprContext[] elementPropertiesExpr() {
			return GetRuleContexts<ElementPropertiesExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementPropertiesExprContext elementPropertiesExpr(int i) {
			return GetRuleContext<ElementPropertiesExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementWithCouplingsExprContext[] elementWithCouplingsExpr() {
			return GetRuleContexts<ElementWithCouplingsExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementWithCouplingsExprContext elementWithCouplingsExpr(int i) {
			return GetRuleContext<ElementWithCouplingsExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipTagExprContext[] relationshipTagExpr() {
			return GetRuleContexts<RelationshipTagExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipTagExprContext relationshipTagExpr(int i) {
			return GetRuleContext<RelationshipTagExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipPropertiesExprContext[] relationshipPropertiesExpr() {
			return GetRuleContexts<RelationshipPropertiesExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipPropertiesExprContext relationshipPropertiesExpr(int i) {
			return GetRuleContext<RelationshipPropertiesExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipSourceExprContext[] relationshipSourceExpr() {
			return GetRuleContexts<RelationshipSourceExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipSourceExprContext relationshipSourceExpr(int i) {
			return GetRuleContext<RelationshipSourceExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipDestinationExprContext[] relationshipDestinationExpr() {
			return GetRuleContexts<RelationshipDestinationExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipDestinationExprContext relationshipDestinationExpr(int i) {
			return GetRuleContext<RelationshipDestinationExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipSpecifiedExprContext[] relationshipSpecifiedExpr() {
			return GetRuleContexts<RelationshipSpecifiedExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipSpecifiedExprContext relationshipSpecifiedExpr(int i) {
			return GetRuleContext<RelationshipSpecifiedExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipAllExprContext[] relationshipAllExpr() {
			return GetRuleContexts<RelationshipAllExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipAllExprContext relationshipAllExpr(int i) {
			return GetRuleContext<RelationshipAllExprContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionConnectorContext[] expressionConnector() {
			return GetRuleContexts<ExpressionConnectorContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionConnectorContext expressionConnector(int i) {
			return GetRuleContext<ExpressionConnectorContext>(i);
		}
		public GeneralExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_generalExpression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGeneralExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GeneralExpressionContext generalExpression() {
		GeneralExpressionContext _localctx = new GeneralExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_generalExpression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2359288L) != 0)) {
				{
				State = 51;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 38;
					elementTypeExpr();
					}
					break;
				case 2:
					{
					State = 39;
					elementParentExpr();
					}
					break;
				case 3:
					{
					State = 40;
					elementTagExpr();
					}
					break;
				case 4:
					{
					State = 41;
					elementTechnologyExpr();
					}
					break;
				case 5:
					{
					State = 42;
					elementPropertiesExpr();
					}
					break;
				case 6:
					{
					State = 43;
					elementWithCouplingsExpr();
					}
					break;
				case 7:
					{
					State = 44;
					relationshipTagExpr();
					}
					break;
				case 8:
					{
					State = 45;
					relationshipPropertiesExpr();
					}
					break;
				case 9:
					{
					State = 46;
					relationshipSourceExpr();
					}
					break;
				case 10:
					{
					State = 47;
					relationshipDestinationExpr();
					}
					break;
				case 11:
					{
					State = 48;
					relationshipSpecifiedExpr();
					}
					break;
				case 12:
					{
					State = 49;
					relationshipAllExpr();
					}
					break;
				case 13:
					{
					State = 50;
					expressionConnector();
					}
					break;
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementTypeExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT_TYPE() { return GetToken(StructurizrDSLExpressionsParser.ELEMENT_TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(StructurizrDSLExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue() {
			return GetRuleContext<ExpressionValueContext>(0);
		}
		public ElementTypeExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementTypeExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementTypeExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementTypeExprContext elementTypeExpr() {
		ElementTypeExprContext _localctx = new ElementTypeExprContext(Context, State);
		EnterRule(_localctx, 2, RULE_elementTypeExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 56;
			Match(ELEMENT_TYPE);
			State = 57;
			Match(EQUALS);
			State = 58;
			expressionValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementParentExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT_PARENT() { return GetToken(StructurizrDSLExpressionsParser.ELEMENT_PARENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(StructurizrDSLExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue() {
			return GetRuleContext<ExpressionValueContext>(0);
		}
		public ElementParentExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementParentExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementParentExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementParentExprContext elementParentExpr() {
		ElementParentExprContext _localctx = new ElementParentExprContext(Context, State);
		EnterRule(_localctx, 4, RULE_elementParentExpr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			Match(ELEMENT_PARENT);
			State = 61;
			Match(EQUALS);
			State = 62;
			expressionValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementTagExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT_TAG() { return GetToken(StructurizrDSLExpressionsParser.ELEMENT_TAG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(StructurizrDSLExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTEQUALS() { return GetToken(StructurizrDSLExpressionsParser.NOTEQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext[] expressionValue() {
			return GetRuleContexts<ExpressionValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue(int i) {
			return GetRuleContext<ExpressionValueContext>(i);
		}
		public ElementTagExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementTagExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementTagExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementTagExprContext elementTagExpr() {
		ElementTagExprContext _localctx = new ElementTagExprContext(Context, State);
		EnterRule(_localctx, 6, RULE_elementTagExpr);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(ELEMENT_TAG);
			State = 65;
			_la = TokenStream.LA(1);
			if ( !(_la==EQUALS || _la==NOTEQUALS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 67;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 66;
					expressionValue();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 69;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementTechnologyExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT_TECHNOLOGY() { return GetToken(StructurizrDSLExpressionsParser.ELEMENT_TECHNOLOGY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue() {
			return GetRuleContext<ExpressionValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(StructurizrDSLExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTEQUALS() { return GetToken(StructurizrDSLExpressionsParser.NOTEQUALS, 0); }
		public ElementTechnologyExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementTechnologyExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementTechnologyExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementTechnologyExprContext elementTechnologyExpr() {
		ElementTechnologyExprContext _localctx = new ElementTechnologyExprContext(Context, State);
		EnterRule(_localctx, 8, RULE_elementTechnologyExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			Match(ELEMENT_TECHNOLOGY);
			State = 72;
			_la = TokenStream.LA(1);
			if ( !(_la==EQUALS || _la==NOTEQUALS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 73;
			expressionValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementPropertiesExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT_PROPERTIES() { return GetToken(StructurizrDSLExpressionsParser.ELEMENT_PROPERTIES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PropertyNameContext propertyName() {
			return GetRuleContext<PropertyNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue() {
			return GetRuleContext<ExpressionValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(StructurizrDSLExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NOTEQUALS() { return GetToken(StructurizrDSLExpressionsParser.NOTEQUALS, 0); }
		public ElementPropertiesExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementPropertiesExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementPropertiesExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementPropertiesExprContext elementPropertiesExpr() {
		ElementPropertiesExprContext _localctx = new ElementPropertiesExprContext(Context, State);
		EnterRule(_localctx, 10, RULE_elementPropertiesExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			Match(ELEMENT_PROPERTIES);
			State = 76;
			Match(T__0);
			State = 77;
			propertyName();
			State = 78;
			Match(T__1);
			State = 79;
			_la = TokenStream.LA(1);
			if ( !(_la==EQUALS || _la==NOTEQUALS) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 80;
			expressionValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementWithCouplingsExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ELEMENT() { return GetToken(StructurizrDSLExpressionsParser.ELEMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(StructurizrDSLExpressionsParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionValueContext expressionValue() {
			return GetRuleContext<ExpressionValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipPointerContext[] relationshipPointer() {
			return GetRuleContexts<RelationshipPointerContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RelationshipPointerContext relationshipPointer(int i) {
			return GetRuleContext<RelationshipPointerContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MORE_THAN() { return GetToken(StructurizrDSLExpressionsParser.MORE_THAN, 0); }
		public ElementWithCouplingsExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elementWithCouplingsExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IStructurizrDSLExpressionsVisitor<TResult> typedVisitor = visitor as IStructurizrDSLExpressionsVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElementWithCouplingsExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementWithCouplingsExprContext elementWithCouplingsExpr() {
		ElementWithCouplingsExprContext _localctx = new ElementWithCouplingsExprContext(Context, State);
		EnterRule(_localctx, 12, RULE_elementWithCouplingsExpr);
		int _la;
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ELEMENT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 82;
				Match(ELEMENT);
				State = 83;
				Match(EQUALS);
				State = 85;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==RELATIONSHIP_POINTER) {
					{
					State = 84;
					relationshipPointer();
					}
				}

				State = 87;
				expressionValue();
				State = 89;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 88;
					relationshipPointer();
					}
					break;
				}
				State = 92;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==MORE_THAN) {
					{
					State = 91;
					Match(MORE_THAN);
					}
				}

				}
				break;
			case VALUE:
			case RELATIONSHIP_POINTER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 95;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==RELATIONSHIP_POINTER) {
					{
					State = 94;
					relationshipPointer();
					}
				}

				State = 97;
				expressionValue();
				State = 99;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
				case 1:
					{
					State = 98;
					relationshipPointer();
					}
					break;
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==MORE_THAN) {
					{
					State = 101;
					Match(MORE_THAN);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelationshipTagExprContext : ParserRuleContext {
